2014-02-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeDivision): Fixed bug 2254

2014-02-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Fix condition for shifting stack operands in a.

2014-02-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Handle signed and unsigned 8-bit operands the same in destructive ifx and.

2014-02-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bug-2253.c: reduce array size for
	  ports that do not support large local variables

2014-02-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2253.c:
	  Fix and improve division and multiplication, includes fix for #2253.

2014-02-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2252.c:
	  Fix bug #2252.
	* src/SDCCpeeph.c:
	  Fix notVolatile() for stm8.
	* src/stm8/peeph.def:
	  Add some peephole rules to eliminate unnecessary loads.

2014-02-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c
	  Slightly more efficient complement.

2014-02-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c
	  Fix jump on condition that is stored in register y in reverse order (bug #2251).

2014-02-02 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/stm8mch.c,
	  src/stm8/gen.c:
	  Apply patch #215 by Ben Shi to fix bug #2227.
	* src/port.h,
	  sdas/asxxsrc/asmain.c:
	  Fix >= comparisons.

2014-01-12 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/stm8pst.c,
	  src/stm8/main.c:
	  Enable .optsdcc for stm8.
	  
2014-01-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (ast_print): fixed GOTO, warn for undecorated

2014-01-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_gptrget.c,
	* device/lib/_gptrput.c,
	* src/ds390/main.c,